added 2 more cities

--- a/Wise110/index.html
+++ b/Wise110/index.html
@@ -12,6 +12,8 @@
         <li>paris</li>
         <li>London</li>
         <li>Newyork</li>
+        <li>Tokyo</li>
+        <li>Berlin</li>
     </ul>
 </body>
-</html>
+</html> 
