Jos Branch changes

--- a/Wise110/index.html
+++ b/Wise110/index.html
@@ -14,5 +14,9 @@
         <li>Tokyo</li>
         <li>Berlin</li>
     </ul>
+    <h1>This coming from Jos Branch</h1>
+    <ul>
+        <li>Jo made this changes</li>
+    </ul>
 </body>
 </html> 
