--- a/Wise110/index.html
+++ b/Wise110/index.html
@@ -17,6 +17,7 @@
     <h1>This coming from Jos Branch</h1>
     <ul>
         <li>Jo made this changes</li>
+        <li>Merge Pull please</li>
     </ul>
 </body>
 </html> 
